--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@typescript-eslint/parser": "^5.45.0",
 		"autoprefixer": "^10.4.14",
 		"commitizen": "^4.3.0",
+		"cz-conventional-changelog": "3.3.0",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.26.0",
@@ -42,5 +43,10 @@
 	"dependencies": {
 		"@types/bcryptjs": "^2.4.2",
 		"bcryptjs": "^2.4.3"
+	},
+	"config": {
+		"commitizen": {
+			"path": "./node_modules/cz-conventional-changelog"
+		}
 	}
 }
